kubernetes/manifests/frontend/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend 
    project: microservices_mp4-to-mp3-converter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: adityadocs/frontend-microservices1:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "200m"
              memory: "400Mi"
            limits:
              cpu: "400m"
              memory: "600Mi"
