kubernetes/manifests/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
    project: microservices_mp4-to-mp3-converter
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
