kubernetes/manifests/frontend/frontend-ingress-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: frontend
    project: microservices_mp4-to-mp3-converter
spec:
  rules:
  - http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 3000
        - path: /api(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: gateway-service
              port:
                number: 8080
